# Watcher

./: README.md  pyproject.toml
src/watcher/: __init__.py  main.py
src/watcher/cogs/: regist.py
