[project]
name = "watcher"
version = "0.1.0"
description = "aqued support server bot"
authors = [
    { name = "gx1285", email = "contact@gx1285.com" }
]
dependencies = [
    "discord.py @ git+https://github.com/Rapptz/discord.py@59f877fcf013c4ddeeb2b39fc21f03e76f995461",
    "python-dotenv>=1.0.1",
    "gspread>=6.1.2",
    "oauth2client>=4.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/watcher"]
